--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev-mock": "concurrently \"json-server -w mock.json -p 4500 -d 300\" \"next dev\"",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
