--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "pg": "^8.11.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "server-only": "^0.0.1"
+    "server-only": "^0.0.1",
+    "swr": "^2.1.5"
   },
   "devDependencies": {
     "@types/node": "^20.3.1",
