--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "client-only": "^0.0.1",
     "dotenv": "^16.1.4",
