--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "dotenv": "^16.1.4",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "formik": "^2.4.2",
     "lodash": "^4.17.21",
     "next": "13.4.4",
     "pg": "^8.11.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "server-only": "^0.0.1",
-    "swr": "^2.1.5"
+    "swr": "^2.1.5",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.3.1",
