--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev-mock": "concurrently \"json-server -w mock.json -p 4500 -d 300\" \"next dev\"",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test-coverage": "jest --coverage"
   },
   "dependencies": {
     "axios": "^1.4.0",
@@ -27,9 +29,13 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "@types/node": "^20.3.1",
     "@types/react": "^18.2.12",
     "autoprefixer": "^10.4.14",
+    "jest": "^29.6.1",
+    "jest-environment-jsdom": "^29.6.1",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.1.3"
